--- a/index.css
+++ b/index.css
@@ -82,19 +82,16 @@ ul li.active a{
     }
 
     .content {
-        padding: 350px 600px;
-
+        position: absolute;
+        top: 300px;
+        right: 300px;
+        width: 200px;
+        height: 100px;
+        size: 18px;
+        color: #fff;
     }
 
-    p {
-        color: rgb(255, 255, 255);
-        line-height: 1.3em;
-        text-align: left;
-        width: 100%;
-        font-family: Helvetica;
-        font-size: 20px;
-        font-weight: bold;
-    }
+
 
 
 
