--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(../background\ 2.jpg);
+    background-color: black;
     height: 100vh;
     background-size: cover;
     background-position: center;
