--- a/index.css
+++ b/index.css
@@ -63,8 +63,8 @@ ul li.active a{
     }
     .button{
         position: absolute;
-        top: 45%;
-        left: 48%;
+        top: 43%;
+        left: 45%;
         transform: translate(-50%,-50%);
     }
 
@@ -84,11 +84,15 @@ ul li.active a{
     .content {
         position: absolute;
         top: 350px;
-        right: 190px;
+        right: 300px;
         width: 500px;
         height: 100px;
         size: 18px;
         color: #fff;
+    }
+    .Kiyan img{
+        width: 60%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
 
