--- a/index.css
+++ b/index.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    background-color: black;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(10,10,24,1) 35%, rgba(0,0,0,1) 100%);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -64,8 +65,8 @@ ul li.active a{
     }
     .button{
         position: absolute;
-        top: 43%;
-        left: 45%;
+        top: 47%;
+        left: 50%;
         transform: translate(-50%,-50%);
     }
 
@@ -84,16 +85,17 @@ ul li.active a{
 
     .content {
         position: absolute;
-        top: 350px;
-        right: 300px;
+        top: 400px;
+        right: 230px;
         width: 500px;
         height: 100px;
         size: 18px;
         color: #fff;
     }
     .Kiyan img{
-        width: 60%;
+        width: 1000px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        height: fit-content;
     }
 
 
