--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ ul li.active a{
         top: 50%;
         left: 60%;
         transform: translate(-50%,-50%);
-    }
+        }
 
     .btn{
         border:1px solid #fff ;
@@ -82,6 +82,8 @@ ul li.active a{
     .btn:hover{
         background-color: rgb(232, 236, 0);
         color: rgb(0, 0, 0);
+        box-shadow: 0 10px 20px rgba(145, 92, 182, .4);
+        
     }
 
     .btno{
@@ -95,22 +97,49 @@ ul li.active a{
     .btno:hover{
         background-color: rgb(232, 236, 0);
         color: rgb(0, 0, 0);
+        box-shadow: 0 10px 20px rgba(145, 92, 182, .4);
     }
 
     .content {
-        position: absolute;
-        top: 450px;
-        right: 310px;
-        width: 500px;
-        height: 100px;
-        size: 18px;
-        color: #fff;
-    }
+            color: rgb(240, 204, 0);
+            font-family: monospace;
+            position: absolute;
+            top: 450px;
+            right: 310px;
+            width: 500px;
+            height: 100px;
+            overflow: hidden; /* Ensures the content is not revealed until the animation */
+            border-right: .10em solid orange; /* The typwriter cursor */
+            overflow: hidden; /* Ensures the content is not revealed until the animation */
+            white-space: pre-line; /* Keeps the content on a single line */
+            margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+            animation: 
+              typing 8.5s steps(30, end),
+              blink-caret .5s step-end infinite;
+          }
+    
+
     .Kiyan img{
         width: 1050px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         height: fit-content;
     }
+
+
+
+    @keyframes typing {
+    from { width: 0 }
+    to { width: 30% }
+    }
+  
+
+    @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange }
+     }
+    
+    
+      
 
 
 
