--- a/index.css
+++ b/index.css
@@ -1,8 +1,7 @@
 *{
     margin: 0px;
-    padding: 2;
-    font-family:"Calibri";
-    font-style: bold;
+    padding: 0;
+    font-family:"Arial Black";
     
 }
 
@@ -109,13 +108,13 @@ ul li.active a{
             width: 500px;
             height: 100px;
             overflow: hidden; /* Ensures the content is not revealed until the animation */
-            border-right: .10em solid orange; /* The typwriter cursor */
+            border-right: .9em solid orange; /* The typwriter cursor */
             overflow: hidden; /* Ensures the content is not revealed until the animation */
             white-space: pre-line; /* Keeps the content on a single line */
             margin: 0 auto; /* Gives that scrolling effect as the typing happens */
             animation: 
-              typing 8.5s steps(30, end),
-              blink-caret .5s step-end infinite;
+              typing 8.5s steps(50, end),
+              blink-caret 1.5s step-end infinite;
           }
     
 
