--- a/index.css
+++ b/index.css
@@ -11,8 +11,14 @@ body {
     height: 100vh;
     background-size: cover;
     background-position: center;
-
-  }
+    left: -2px;
+    top: -2px;
+    background-size: 400%;
+    width: calc(100% + 5px);
+    height: calc(100% + 5px);
+    z-index: -1;
+    animation: glower 20s linear infinite;
+    }
 
   ul{
     float: right;  
@@ -36,8 +42,7 @@ body {
     ul li a:hover{
         background-color: rgb(248, 211, 0);
         color: rgb(0, 0, 0);
-
-    }
+     }
 
     ul li.active a{
     background-color: rgb(255, 255, 255);
@@ -141,6 +146,26 @@ body {
     50% { border-color: orange }
      }
     
+
+  
+      
+      @keyframes glower {
+        0% {
+          background-position: 0 0;
+        }
+        
+        50% {
+          background-position: 400% 0;
+        }
+        
+        100% {
+          background-position: 0 0;
+        }
+      }
+      
+  
+        background: linear-gradient(45deg, #e8f74d, #ff6600d9, #00ff66, #13ff13, #ad27ad, #bd2681, #6512b9, #ff3300de, #5aabde);
+
     
       
 
