--- a/DEMOPAGES/Tribute/Tribute.css
+++ b/DEMOPAGES/Tribute/Tribute.css
@@ -18,3 +18,71 @@ body {
     z-index: -1;
     animation: glower 20s linear infinite;
     }
+
+    #slideshow {
+        width:300px;
+        margin:0 auto;
+        overflow:hidden;
+    }
+    
+    .container {
+        width:1200px; /* 300 x 4 */
+        position:relative;
+        -webkit-animation:slide 8s ease-in-out infinite;
+        -moz-animation:slide 8s ease-in-out infinite;
+        -ms-animation:slide 8s ease-in-out infinite;
+        -o-animation:slide 8s ease-in-out infinite;
+        animation:slide 8s ease-in-out infinite;
+    }
+    
+    .container section {
+        width:300px;
+        height:200px;
+        float:left;
+    }
+    
+    .container section:nth-child(1) {background-color:green;}
+    .container section:nth-child(2) {background-color:orange;}
+    .container section:nth-child(3) {background-color:blue;}
+    .container section:nth-child(4) {background-color:red;}
+    
+    .container:hover {
+       animation-play-state:paused;
+       -webkit-animation-play-state:paused;
+    }
+    
+    @-webkit-keyframes slide {
+        0% {left:0;}
+        25% {left:-300px;}
+        50% {left:-600px;}
+        75% {left:-900px;}
+        100% {left:0;}
+    }
+    @-moz-keyframes slide {
+        0% {left:0;}
+        25% {left:-300px;}
+        50% {left:-600px;}
+        75% {left:-900px;}
+        100% {left:0;}
+    }
+    @-ms-keyframes slide {
+        0% {left:0;}
+        25% {left:-300px;}
+        50% {left:-600px;}
+        75% {left:-900px;}
+        100% {left:0;}
+    }
+    @-o-keyframes slide {
+        0% {left:0;}
+        25% {left:-300px;}
+        50% {left:-600px;}
+        75% {left:-900px;}
+        100% {left:0;}
+    }
+    @keyframes slide {
+        0% {left:0;}
+        25% {left:-300px;}
+        50% {left:-600px;}
+        75% {left:-900px;}
+        100% {left:0;}
+    }
