--- a/DEMOPAGES/Tribute/Tribute.css
+++ b/DEMOPAGES/Tribute/Tribute.css
@@ -86,3 +86,20 @@ body {
         75% {left:-900px;}
         100% {left:0;}
     }
+
+    @keyframes glower {
+        0% {
+          background-position: 0 0;
+        }
+        
+        50% {
+          background-position: 400% 0;
+        }
+        
+        100% {
+          background-position: 0 0;
+        }
+      }
+
+
+
