--- a/DEMOPAGES/Tribute/Tribute.css
+++ b/DEMOPAGES/Tribute/Tribute.css
@@ -19,74 +19,6 @@ body {
     animation: glower 20s linear infinite;
     }
 
-    #slideshow {
-        width:300px;
-        margin:0 auto;
-        overflow:hidden;
-    }
-    
-    .container {
-        width:1200px; /* 300 x 4 */
-        position:relative;
-        -webkit-animation:slide 8s ease-in-out infinite;
-        -moz-animation:slide 8s ease-in-out infinite;
-        -ms-animation:slide 8s ease-in-out infinite;
-        -o-animation:slide 8s ease-in-out infinite;
-        animation:slide 8s ease-in-out infinite;
-    }
-    
-    .container section {
-        width:300px;
-        height:200px;
-        float:left;
-    }
-    
-    .container section:nth-child(1) {background-color:green;}
-    .container section:nth-child(2) {background-color:orange;}
-    .container section:nth-child(3) {background-color:blue;}
-    .container section:nth-child(4) {background-color:red;}
-    
-    .container:hover {
-       animation-play-state:paused;
-       -webkit-animation-play-state:paused;
-    }
-    
-    @-webkit-keyframes slide {
-        0% {left:0;}
-        25% {left:-300px;}
-        50% {left:-600px;}
-        75% {left:-900px;}
-        100% {left:0;}
-    }
-    @-moz-keyframes slide {
-        0% {left:0;}
-        25% {left:-300px;}
-        50% {left:-600px;}
-        75% {left:-900px;}
-        100% {left:0;}
-    }
-    @-ms-keyframes slide {
-        0% {left:0;}
-        25% {left:-300px;}
-        50% {left:-600px;}
-        75% {left:-900px;}
-        100% {left:0;}
-    }
-    @-o-keyframes slide {
-        0% {left:0;}
-        25% {left:-300px;}
-        50% {left:-600px;}
-        75% {left:-900px;}
-        100% {left:0;}
-    }
-    @keyframes slide {
-        0% {left:0;}
-        25% {left:-300px;}
-        50% {left:-600px;}
-        75% {left:-900px;}
-        100% {left:0;}
-    }
-
     @keyframes glower {
         0% {
           background-position: 0 0;
@@ -100,6 +32,35 @@ body {
           background-position: 0 0;
         }
       }
+    
+    .Sam img{
+        width: 700px;
+        float: right;
+        margin-right: 4%;
+        margin-top: 6%;
+        box-shadow: 5px 5px 20px rgb(71, 1, 28);
+    }
+      h1 {
+        color: #FFF;
+        font-size: 2em;
+        padding-top: 100px;
+        width: 100%;
+        font-family: Georgia;
+        text-align: center;
+      }
+      p {
+        color: #FFF;
+        font-size: 1.0em;
+        padding-top: 30px;
+        width: 50%;
+        font-family: Calibri;
+        text-align: left;
+        margin-left: 9%;
+
+    }
+
+    
+    
 
 
 
