--- a/DEMOPAGES/Restaurant/Restuarant.css
+++ b/DEMOPAGES/Restaurant/Restuarant.css
@@ -1,14 +1,59 @@
-.border {
-    background-color: #051622;
-    color: white;
-    border-bottom: 0.5px solid gray;
-    width: 100%;
-    line-height: 80px;
-    height: 80px;
-    font-size: 18px;
-    padding: 0 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-family: 'Karla';
+*{
+    margin: 0px;
+    padding: 0;
+    font-family:"Roboto";
 }
+  
+    body {
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    }
+
+  .main{
+    max-width: 1200px;
+    margin: auto;
+    }
+
+  ul{
+    float: right;  
+    list-style-type: none;
+    margin-top: 25px;
+
+  }
+
+    ul li{
+      display: inline-block;
+
+  }
+
+      ul li a{
+      text-decoration: none;
+      color: rgb(78, 47, 47);
+      padding: 5px 20px;
+      border:1px solid #fff ;
+      background-color: #f9a01b;
+      transition: 0.6s ease;
+    }
+    ul li a:hover{
+        background-color: rgb(248, 211, 0);
+        color: rgb(0, 0, 0);
+     }
+
+    ul li.active a{
+    background-color: rgb(255, 255, 255);
+    color: rgb(247, 247, 247);
+    }
+    .logo img{
+        float: left;
+        width: 100px;
+        height: auto;
+        padding: 5px 20px;
+    }
+    .BURG img{
+        width: 1000px;
+        background-position: center;
+    }
+
