--- a/DEMOPAGES/Gallery/BioHealth.css
+++ b/DEMOPAGES/Gallery/BioHealth.css
@@ -143,6 +143,29 @@ body {
         padding-top: 90px;
         padding-left: 60%;
         margin-right: 5%;
+        text-align: justify;
+        text-justify: inter-word;
          }
+
+      .Back{
+       position: static;
+          top: 60%;
+          left: 70%;
+          transform: translate(-50%,-50%);
+      
+      }
+         .Back{
+        border:1px solid #fff ;
+          padding: 10px 30px;
+          color: #fff;
+          text-decoration: none;
+          transition: 0.6s ease;
+      
+      }
+      .Back:hover{
+          background-color: black;
+          color: #fff;
+          box-shadow: 0 20px 40px rgba(145, 92, 182, .4);
+      }
       
     
