--- a/reviewecma.css
+++ b/reviewecma.css
@@ -9,10 +9,18 @@
 }
 
 body {
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(10,10,24,1) 35%, rgba(0,0,0,1) 100%);
-height: 100vh;
-background-size: cover;
-background-position: center;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(10,10,24,1) 35%, rgba(0,0,0,1) 100%);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    left: -2px;
+    top: -2px;
+    background-size: 400%;
+    width: calc(100% + 5px);
+    height: calc(100% + 5px);
+    z-index: -1;
+    animation: glower 20s linear infinite;
 }
 
 h1 { color: aliceblue;
@@ -21,7 +29,7 @@ h1 { color: aliceblue;
 }
 
 .vid {
-    margin-left: 2%;
+    margin-left: 6%;
     margin-right: auto;
     display: block;
     margin-top: 3%;
@@ -57,14 +65,30 @@ h1 { color: aliceblue;
      }
     
     .history img{
-        width: 500px;
+        width: 600px;
         float: left;
-        margin-left: 5%;
+        margin-left: 8%;
         margin-top: 2%;
         margin-bottom: 2%;
         box-shadow: 5px 5px 20px rgb(71, 1, 28);
     }
-
-
+    .titlecma {
+        color: aliceblue;
+    text-align: center;
+    margin-top: 15%;
+    }
+    @keyframes glower {
+        0% {
+          background-position: 0 0;
+        }
+        
+        50% {
+          background-position: 400% 0;
+        }
+        
+        100% {
+          background-position: 0 0;
+        }
+      }
 
 
