--- a/reviewecma.css
+++ b/reviewecma.css
@@ -23,9 +23,15 @@ body {
     animation: glower 20s linear infinite;
 }
 
-h1 { color: aliceblue;
-    text-align: center;
+h1{ text-align: center;
     margin-top: 2%;
+
+}
+
+h2 { color: aliceblue;
+    text-align: center;
+    margin-left: 53%;
+    margin-top: 5%;
 }
 
 .vid {
