--- a/index.css
+++ b/index.css
@@ -2,191 +2,150 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 *{
     font-family: 'Muli', sans-serif;
-    user-select: none;
-    }
-    
-
+}
 body {
-    display: block;
-    background: rgb(253,209,7);
-    background: radial-gradient(circle, rgba(253,209,7,1) 0%, rgba(255,244,195,1) 0%, rgba(255,247,213,1) 44%, rgba(255,247,211,1) 75%, rgba(255,255,255,1) 91%);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-size: 400%;
+    background: rgb(235, 236, 236);
+    background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
+    padding: 0px;
     animation: glower 20s linear infinite;
+    background-size: 300%;
+}
+ul {
+    list-style: none;
+}
+a{
+    color: #ffffff;
+    text-decoration: none;
+}
+section{
+    width:100%;
+    height: 95vh;
+    position: relative;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    padding: 0px 5%;
+}
+
+nav ul{
+    display: flex;
+
+}
+nav ul li a{
+    margin: 30px;
+    font-weight: bold;
+    color: #0b212f;
+    font-size: 15px;
+    font-weight: 700;
+}
+ul li a :hover{
+    background-color: rgb(248, 211, 0);
+    color: rgb(0, 0, 0);
+}
+.logo{
+    font-weight: bolder;
+    font-size: large;
+    color: black;
+}
+.text-container p:nth-child(1){
+    color: #0b212f;
+    font-weight: 900;
+    font-size: 30px;
+}
+.text-container p:nth-child(2){
+    font-style: BOLD;
+    font-weight: bolder;
+    color: #4470f4;
+    letter-spacing: 3px;
+    font-size: 70px;
+}
+.text-container p:nth-child(3){
+    font-size: 30px;
+    color: #0b212f;
+    font-weight: bold;
+    line-height: 34px;
+    animation: 
+    typing 8.5s steps(50, end),
+    blink-caret 1.5s step-end infinite;
+    overflow: hidden; 
+    border-right: .9em solid rgb(0, 0, 0); 
+    overflow: hidden;
+    white-space: pre-line; 
+    margin: 5 auto; 
+}
+.text-container p{
+    line-height: 0px;
+    margin: 65px 0px 25px;
+}
+.text-container{
+    position: absolute;
+    left: 17%;
+    top: 42%;
+    transform: translate(-13%,-42%);
+}
+
+.text-container button{
+    width: 130px;
+    height: 42px;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    outline:none;
+    margin: 0px 5px;
+    border: none;
+    color: #ffffff;
+    background-color: #3f71f5;
     }
 
-  ul{
-    float: right;  
-    list-style-type: none;
-    margin-top: 30px;
-    font-size: larger;
+.model{
+    height: 540px;
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+}
 
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 30% }
+        }
+  
+        
+    @keyframes blink-caret {
+        from, to { border-color: transparent }
+        50% { border-color: rgb(0, 0, 0) }
+        }
+      
+    @keyframes glower {
+    0% {
+      background-position: 0 0;
+    }
+    
+    50% {
+      background-position: 400% 0;
+    }
+    
+    100% {
+      background-position: 0 0;
+    }
   }
-
-    ul li{
-      display: inline-block;
-    }
-
-      ul li a{
-      text-decoration: none;
-      color: rgb(2, 2, 2);
-      padding: 5px 20px;
-      font-weight: bold;
-      transition: 0.6s ease;
-    }
-    ul li a:hover{
-        background-color: rgb(248, 211, 0);
-        color: rgb(0, 0, 0);
-     }
-
-    ul li.active a{
-    font-size: x-large;
-    background-color: rgb(255, 255, 255);
-    color: rgb(247, 247, 247);
-    }
-    .logo {
-      color: rgb(248, 211, 0);
-      display: block;
-      float: left;
-      font-size: larger;
-      height: 20px;
-      padding-top: -5%;
-        }
-    
-    .main{
-        display: block;
-        max-width: 1200px;
-        margin: auto;
-    }
-
-    .title{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-    }
-
-    .title h1{
-        color: #fff;
-
-    }
-
-    .button{
-        position: absolute;
-        top: 43%;
-        left: 68%;
-        transform: translate(-50%,-50%);
-        }
-
-    .btn{
-        border:1px solid rgb(0, 0, 0) ;
-        font-size: large;
-        font-weight: bold;
-        padding: 10px 10px;
-        color: rgb(0, 0, 0);
-        text-decoration: none;
-        transition: 0.6s ease;
-    }
-
-    .btn:hover{
-      background-color: rgb(248, 211, 0);
-        color: rgb(0, 0, 0);
-        box-shadow: 0 20px 40px rgba(145, 92, 182, .4);
-        
-    }
-
-    .btno{
-        border:1px solid rgb(0, 0, 0) ;
-        font-size: large;
-        font-weight: bold;
-        padding: 10px 10px;
-        color: rgb(0, 0, 0);
-        text-decoration: none;
-        transition: 0.6s ease;
-    }
-
-    .btno:hover{
-      background-color: rgb(248, 211, 0);
-        color: rgb(0, 0, 0);
-        box-shadow: 0 20px 40px rgba(145, 92, 182, .4);
-    }
-
-    .content {
-            display: block;
-            color: rgb(0, 0, 0);
-            font-family: monospace;
-            position: absolute;
-            font-weight: bold;
-            top: 350px;
-            right: 200px;
-            width: 500px;
-            height: 100px;
-            overflow: hidden; 
-            border-right: .9em solid rgb(0, 0, 0); 
-            overflow: hidden;
-            white-space: pre-line; 
-            margin: 0 auto; 
-            animation: 
-              typing 8.5s steps(50, end),
-              blink-caret 1.5s step-end infinite;
-          }
-    
-      .Kiyan img{
-        display: block;
-        position: absolute;
-        float: right;
-        margin-top: 8%;
-        padding-left: 16%;
-        width: 400px;
-      }
-
-      @keyframes typing {
-      from { width: 0 }
-      to { width: 30% }
-      }
-
-      
-  
-
-      @keyframes blink-caret {
-      from, to { border-color: transparent }
-      50% { border-color: rgb(0, 0, 0) }
-      }
-    
-
-  
-      
-      @keyframes glower {
-        0% {
-          background-position: 0 0;
-        }
-        
-        50% {
-          background-position: 400% 0;
-        }
-        
-        100% {
-          background-position: 0 0;
-        }
-      }
-
-      .name{
-        display: block;
-        float: right;
-        margin-top: 7%;
-        margin-right: -40%;
-        font-size: xx-large;
-      }
-
-    
-      
-
-
-
-
-
-
+  nav.fill ul li a:hover {
+    background-color: #3f71f5;
+    color: rgb(255, 255, 255);
+    z-index: 1;
+    transition: 0.6s ease;
+  }
+  nav.fill ul li a:hover:after {
+    z-index: -10;
+    animation: fill 1s forwards;
+    -webkit-animation: fill 1s forwards;
+    -moz-animation: fill 1s forwards;
+    opacity: 1;
+  }
 
 
