--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ ul li a :hover{
     font-size: 30px;
     color: #0b212f;
     font-weight: bold;
-    line-height: 34px;
+    line-height: 29px;
     animation: 
     typing 8.5s steps(50, end),
     blink-caret 1.5s step-end infinite;
@@ -77,7 +77,7 @@ ul li a :hover{
     border-right: .9em solid rgb(0, 0, 0); 
     overflow: hidden;
     white-space: pre-line; 
-    margin: 5 auto; 
+    margin: 3 auto; 
 }
 .text-container p{
     line-height: 0px;
@@ -104,7 +104,7 @@ ul li a :hover{
     }
 
 .model{
-    height: 560px;
+    height: 537px;
     position: absolute;
     bottom: 40px;
     left: 50%;
@@ -118,7 +118,7 @@ ul li a :hover{
         
     @keyframes blink-caret {
         from, to { border-color: transparent }
-        50% { border-color: rgb(0, 0, 0) }
+        40% { border-color: rgb(0, 0, 0) }
         }
       
     @keyframes glower {
@@ -146,6 +146,17 @@ ul li a :hover{
     -webkit-animation: fill 1s forwards;
     -moz-animation: fill 1s forwards;
     opacity: 1;
+  }
+  .about-container{
+    width: 80%;
+    height: 330px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 2px 2px 6px black;
+    border: none;
+    display: flex;
+    margin: -7% auto 20px auto;
+    position: relative;
   }
 
 
