--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 *{
     font-family: 'Muli', sans-serif;
 }
+
 body {
     background: rgb(235, 236, 236);
     background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
@@ -10,6 +11,7 @@ body {
     animation: glower 20s linear infinite;
     background-size: 300%;
 }
+
 ul {
     list-style: none;
 }
@@ -158,5 +160,20 @@ ul li a :hover{
     margin: -7% auto 20px auto;
     position: relative;
   }
+
+  .about-container p:nth-child(1){
+      color: #0b212f;
+      font-size: 23px;
+      font-weight: bold;
+  }
+  .about-container p:nth-child(2){
+      font-size: 13px;
+      font-weight: bold;
+      line-height: 5px;
+  }
+
+  
+
+
 
 
