--- a/index.css
+++ b/index.css
@@ -196,7 +196,9 @@ ul li a :hover{
     border-radius: 4px;
     box-sizing: border-box;
   }
-  
+  .animate-svg img{
+      height: 150px;
+  }
 
 
 
