--- a/index.css
+++ b/index.css
@@ -197,9 +197,36 @@ ul li a :hover{
     box-sizing: border-box;
   }
   .animate-svg img{
+      
       height: 150px;
   }
-
-
+.table {
+    text-align: center;
+    height:600px;
+    background-color: #ffffff;   
+}
+.styled-table {
+    border-collapse: collapse;
+    margin: 50px 410px;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 500px;
+    box-shadow: 2px 2px 40px rgba(0, 0, 0, 0.15);
+}
+h1{
+    color: #0b212f;
+}
+.styled-table thead tr {
+    background-color: #3f71f5;
+    color: #ffffff;
+    text-align: left;
+}
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #0b212f;
+}
+th{
+    text-align: center;
+}
 
 
