--- a/index.css
+++ b/index.css
@@ -207,7 +207,7 @@ ul li a :hover{
 }
 .styled-table {
     border-collapse: collapse;
-    margin: 50px 410px;
+    margin: 50px 460px;
     font-size: 0.9em;
     font-family: sans-serif;
     min-width: 500px;
@@ -230,3 +230,26 @@ th{
 }
 
 
+
+.box-1, .box-2, .box-3{
+    width: 300px;
+    height: 320px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 2px 2px 5px;
+    display: inline-block;
+}
+
+.box-container{
+    display: flex;
+    justify-content: space-between;
+}
+.box-1{
+    background-image: url("Keyan1.jpg");
+}
+.box-2{
+    background-image: url("keyan2.jpg");
+}
+.box-3{
+    background-image: url("keyan3.jpg");
+}
