--- a/index.css
+++ b/index.css
@@ -4,6 +4,22 @@
     font-family: 'Muli', sans-serif;
 }
 
+<style>
+.left, .right{
+    float: left;
+    width: 20%;
+}
+.main {
+    float: left;
+    width: 60%;   
+}
+@media screen and (max-width:800px){
+    .left .right .main{
+        width: 100%;
+    }
+}
+
+
 body {
     background: rgb(235, 236, 236);
     background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
