--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 *{
     font-family: 'Muli', sans-serif;
-
+    
 }
 
 @media only screen and (max-width: 768px) {
@@ -13,15 +13,16 @@
   }
 
 
-@media only screen and (max-width: 600px) {
-body {
-    background: rgb(235, 236, 236);
-    background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
-    padding: 0px;
-    animation: glower 20s linear infinite;
-    background-size: 300%;
-}
-}
+  @media only screen and (max-width: 600px) {
+    body {
+        background: #ffffff;
+        padding: 0px;
+        animation: glower 20s linear infinite;
+        background-size: 300%;
+    }
+    
+  }
+
 ul {
     list-style: none;
 }
@@ -162,13 +163,16 @@ ul li a :hover{
   .about-container{
     width: 80%;
     height: 330px;
-    background-color: #ffffff;
+    background: rgb(235, 236, 236);
+    background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
     border-radius: 20px;
     box-shadow: 2px 2px 6px black;
     border: none;
     display: flex;
     margin: -7% auto 20px auto;
     position: relative;
+    animation: glower 20s linear infinite;
+    background-size: 300%;
   }
 
   .about-container p:nth-child(1){
@@ -263,3 +267,16 @@ th{
 .box-3{
     background-image: url("keyan3.jpg");
 }
+
+@keyframes glower {
+    0% {
+      background-position: 0 0;
+    }
+    
+    50% {
+      background-position: 400% 0;
+    }
+    
+    100% {
+      background-position: 0 0;
+    }
