--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 *{
     font-family: 'Muli', sans-serif;
-    
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -26,10 +26,12 @@
 ul {
     list-style: none;
 }
+
 a{
     color: #ffffff;
     text-decoration: none;
 }
+
 section{
     width:100%;
     height: 95vh;
@@ -280,3 +282,79 @@ th{
     100% {
       background-position: 0 0;
     }
+}
+footer {
+    height: 200px;
+    }
+footer p:nth-child(1){
+    text-align: center;
+    font-weight: bold;
+    color: #0b212f;
+    line-height: 10px;
+    font-size: 30px;
+}
+footer p:nth-child(2){
+    text-align: center;
+    font-weight: bold;
+    color: #0b212f;
+    line-height: 10px;
+    font-size: 10px;
+}
+
+
+.social-icons a{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0f1011;
+    margin: 20px 10px;
+    border-radius: 50%;
+}
+.social-icons{
+    display: flex;
+    justify-content: center;
+}
+.year{
+    text-align: center;
+    font-weight: bold;
+    color: #0b212f;
+    line-height: 10px;
+    font-size: 10px;
+}
+.social-icons i{
+    color: #ffffff;
+}
+.social-icons i:hover{
+    color: #1a1919;
+}
+.social-icons a:hover{
+    background-color: #ffffff;
+    box-shadow: #0f1011;
+    transition: all ease 0.5s;
+}
+.ab-social-icons{
+    
+    position: fixed;
+    top: 50%;
+    right: 0px;
+    transform: translateY(-50%);
+}
+.ab-social-icons a{
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 50px;
+    padding: 0px;
+    margin: 0px;
+    line-height: 0px;
+    background-color: #ffffff;
+    border: 1px solid #1a1919;
+}
+.ab-social-icons i{
+    text-align: center;
+    font-size: 20px;
+    color: #0f1011;
+}
