--- a/reviewecma.css
+++ b/reviewecma.css
@@ -9,8 +9,8 @@
 }
 
 body {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(10,10,24,1) 35%, rgba(0,0,0,1) 100%);
+    background: rgb(235, 236, 236);
+    background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -25,10 +25,10 @@ body {
 
 h1{ text-align: center;
     margin-top: 2%;
-
+    color: #0b212f;
 }
 
-h2 { color: aliceblue;
+h2 { color: #3f71f5;
     text-align: center;
     margin-left: 53%;
     margin-top: 5%;
@@ -47,11 +47,11 @@ h2 { color: aliceblue;
        left: 70%;
        transform: translate(-50%,-50%);
    
-   }
+}
       .Back{
-     border:1px solid #fff ;
+       background-color: #0b212f;
        padding: 10px 30px;
-       color: #fff;
+       color: #3f71f5;
        text-decoration: none;
        transition: 0.6s ease;
    
@@ -62,7 +62,7 @@ h2 { color: aliceblue;
        box-shadow: 0 20px 40px rgba(145, 92, 182, .4);
    }
    p{
-    color: #ffffff;
+    color: #0b212f;
     padding-top: 90px;
     padding-left: 60%;
     margin-right: 5%;
