--- a/reviewecma.css
+++ b/reviewecma.css
@@ -5,9 +5,50 @@
     padding: 0;
     font-family: 'Muli', sans-serif;
     color: aliceblue;
-
+}
+ul {
+    list-style: none;
 }
 
+a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+section{
+    width:100%;
+    height: 95vh;
+    position: relative;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    padding: 0px 5%;
+}
+nav ul{
+    display: flex;
+
+}
+nav ul li a{
+    margin: 30px;
+    font-weight: bold;
+    color: #0b212f;
+    font-size: 15px;
+    font-weight: 700;
+}
+ul li a :hover{
+    background-color: rgb(248, 211, 0);
+    color: rgb(0, 0, 0);
+}
+.logo{
+    font-weight: bolder;
+    font-size: large;
+    color: black;
+}
 body {
     background: rgb(235, 236, 236);
     background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
@@ -24,7 +65,7 @@ body {
 }
 
 h1{ text-align: center;
-    margin-top: 2%;
+    margin-top: 5%;
     color: #0b212f;
 }
 
