--- a/DEMOPAGES/Gallery/BioHealth.css
+++ b/DEMOPAGES/Gallery/BioHealth.css
@@ -8,7 +8,8 @@
 }
 
     body {
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(10,10,24,1) 35%, rgba(0,0,0,1) 100%);
+      background: rgb(235, 236, 236);
+      background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
     height: 100vh;
     background-size: cover;
     background-position: center;
