--- a/DEMOPAGES/Gallery/Gallery.css
+++ b/DEMOPAGES/Gallery/Gallery.css
@@ -1,15 +1,67 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 *{
     margin: 0px;
     padding: 0;
-    font-family:"Arial Black";
+    font-family: 'Muli', sans-serif;
     
 }
+ul {
+    list-style: none;
+}
 
+a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+section{
+    width:100%;
+    height: 95vh;
+    position: relative;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    padding: 0px 5%;
+}
+nav ul{
+    display: flex;
+
+}
+nav ul li a{
+    margin: 30px;
+    font-weight: bold;
+    color: #0b212f;
+    font-size: 15px;
+    font-weight: 700;
+}
+ul li a :hover{
+    background-color: rgb(248, 211, 0);
+    color: rgb(0, 0, 0);
+}
+.logo{
+    font-weight: bolder;
+    font-size: large;
+    color: black;
+}
 body {
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(10,10,24,1) 35%, rgba(0,0,0,1) 100%);
+    background: rgb(235, 236, 236);
+    background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
     height: 100vh;
     background-size: cover;
     background-position: center;
+    left: -2px;
+    top: -2px;
+    background-size: 400%;
+    width: calc(100% + 5px);
+    height: calc(100% + 5px);
+    z-index: -1;
+    animation: glower 20s linear infinite;
     }
 
 .button{
@@ -20,12 +72,12 @@ body {
 
 }
 .btn{
-    border:1px solid #fff ;
+    border:1px solid #0b212f ;
     padding: 10px 30px;
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     transition: 0.6s ease;
-
+    background-color: #3f71f5;
 }
 .btn:hover{
     background-color: black;
@@ -39,7 +91,7 @@ body {
     transform: translate(-50%,-50%);
 }
 .title h1{
-    color: #fff;
+    color: rgb(0, 0, 0);
 
 }
 
@@ -129,6 +181,19 @@ body {
     75% {left:-900px;}
     100% {left:0;}
 }
+@keyframes glower {
+    0% {
+      background-position: 0 0;
+    }
+    
+    50% {
+      background-position: 400% 0;
+    }
+    
+    100% {
+      background-position: 0 0;
+    }
+  }
 
 
 
