--- a/DEMOPAGES/Gallery/BioHealth.css
+++ b/DEMOPAGES/Gallery/BioHealth.css
@@ -10,12 +10,12 @@
     body {
       background: rgb(235, 236, 236);
       background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+      height: 100vh;
+      background-size: cover;
+      background-position: center;
     }
 
-    h1 { color: aliceblue;
+    h1 { color: #0b212f;
         text-align: center 
     }
     .gallery{
@@ -142,7 +142,7 @@
         }
       }
       p{
-        color: #ffffff;
+        color: #000000;
         padding-top: 90px;
         padding-left: 60%;
         margin-right: 5%;
