--- a/DEMOPAGES/Tribute/Tribute.css
+++ b/DEMOPAGES/Tribute/Tribute.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 *{
     margin: 0px;
     padding: 0;
-    font-family:"Arial Black";
+    font-family: 'Muli', sans-serif;
     
 }
 
 body {
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(10,10,24,1) 35%, rgba(0,0,0,1) 100%);
+  background: rgb(235, 236, 236);
+  background: linear-gradient(90deg, rgba(140,169,245,1) 0%, rgba(255,255,255,1) 16%, rgba(230,237,254,1) 84%);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -18,6 +21,51 @@ body {
     z-index: -1;
     animation: glower 20s linear infinite;
     }
+    ul {
+      list-style: none;
+  }
+  
+  a{
+      color: #ffffff;
+      text-decoration: none;
+  }
+  
+  section{
+      width:100%;
+      height: 95vh;
+      position: relative;
+  }
+  
+  nav{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 60px;
+      background-color: #ffffff;
+      box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+      padding: 0px 5%;
+  }
+  
+  nav ul{
+      display: flex;
+  
+  }
+  nav ul li a{
+      margin: 30px;
+      font-weight: bold;
+      color: #0b212f;
+      font-size: 15px;
+      font-weight: 700;
+  }
+  ul li a :hover{
+      background-color: rgb(248, 211, 0);
+      color: rgb(0, 0, 0);
+  }
+  .logo{
+      font-weight: bolder;
+      font-size: large;
+      color: black;
+  }
 
     @keyframes glower {
         0% {
@@ -41,7 +89,7 @@ body {
         box-shadow: 5px 5px 20px rgb(71, 1, 28);
     }
       h1 {
-        color: #FFF;
+        color: #4470f4;
         font-size: 2em;
         padding-top: 100px;
         width: 100%;
@@ -49,7 +97,7 @@ body {
         text-align: center;
       }
       p {
-        color: #FFF;
+        color: #0b212f;
         font-size: 1.0em;
         padding-top: 30px;
         width: 50%;
