--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body::before {
     content: '';
     height: 60px;
   }
-  
+.navbar {
+    background-color: #6610f2;
+}
   #map {
     width: 100%;
     height: 100%;
